# QtProject

./: .gitignore  CMakeLists.txt  Contact.h  ContactDetailPanel.cpp  ContactDetailPanel.h  ContactDialog.cpp  ContactDialog.h  ContactGroup.cpp  ContactGroup.h  ContactGroupManager.cpp  ContactGroupManager.h  ContactModel.cpp  ContactModel.h  ContactSearchProxyModel.cpp  ContactSearchProxyModel.h  ContactSelectionDialog.cpp  ContactSelectionDialog.h  DataManager.cpp  DataManager.h  KMP.cpp  KMP.h  LRUCache.cpp  LRUCache.h  RecentContactManager.cpp  RecentContactManager.h  Trie.cpp  Trie.h  contacts.json  mainwindow.cpp  mainwindow.h
